[gd_scene load_steps=16 format=2]

[ext_resource path="res://Audio/Laser_Shoot.wav" type="AudioStream" id=1]
[ext_resource path="res://Audio/Audio_Manager.gd" type="Script" id=2]
[ext_resource path="res://Audio/Explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Pickup_Coin.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/death.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/SuperGrottoEscape.ogg" type="AudioStream" id=6]
[ext_resource path="res://Audio/terminal.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/open-terminal.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/close-terminal.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/land.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/error.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/open-door.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/pick-important.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/switch.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/shock.wav" type="AudioStream" id=15]

[node name="Audio_Manager" type="Node2D"]
script = ExtResource( 2 )

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Terminal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="CloseTerminal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="OpenTerminal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="OpenDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Important" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="Shock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
